--- a/geral.css
+++ b/geral.css
@@ -1,38 +1,37 @@
-# calculadora {
-    fundo :  rgb ( 101 ,  161 ,  146 );
-    largura :  200px ; _
-    preenchimento :  20px ; _
-    raio da borda :  10 px ;
+#calculadora {
+    background: yellow;
+    width: 181px;
+    padding: 22px;
+    border-radius: 35px;
 }
-# entrada da calculadora  {
-    fundo :  rgb ( 63 ,  73 ,  69 );
-    cor :  rgb ( 238 ,  255 ,  0 );
-    raio da borda :  10 px ;
-    preenchimento :  5px ; _
+#calculadora input {
+    background: orange;
+    color: black;
+    border-radius: 35px;
+    padding: 5px;
 }
-# botão calculadora  {
-    fundo :  rgb ( 170 ,  57 ,  76 );
-    cor : branco;
-    margem superior :  10 px ;
-    preenchimento :  5px ; _
-    raio da borda :  10 px ;
+#calculadora button {
+    background: orange;
+    color: black;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 35px;
 }
-# botão calculadora  : hover {
-    fundo :  rgb ( 126 ,  100 ,  104 );
-    cor :  rgb ( 0 ,  0 ,  0 );
-    cursor : ponteiro;
+#calculadora button:hover {
+    background: whitesmoke;
+    color: blue;
+    cursor: ew-resize;
 }
-# spTotal {
-    fundo : preto;
-    cor : amarelo;
-    raio da borda :  10 px ;
-    preenchimento :  5px ; _
-    font-family :  'Courier New' , Courier , monospace;
+#spTotal {
+    background: rgb(0, 0, 0);
+    color: orange;
+    border-radius: 35px;
+    padding: 5px;
 }
-. spLista {
-    fundo :  rgb ( 233 ,  213 ,  233 );
-    raio da borda :  10 px ;
-    font-family :  'Lucida Sans' ,  'Lucida Sans Regular' ,  'Lucida Grande' ,  'Lucida Sans Unicode' , Geneva , Verdana , sans-serif;
-    cor : vermelho;
-    largura :  200px ; _
+.spLista {
+    background: blue;
+    border-radius: 35px;
+    color: whitesmoke;
+    width: 181px;
 }
+Footerna
