--- a/geral.css
+++ b/geral.css
@@ -38,3 +38,14 @@
     color: whitesmoke;
     width: 181px;
 }
+
+.calcF{
+    display: none;
+}
+#calcFin:checked  + #calculadora .calcF {
+    display: block;
+}
+ 
+#calcFin{
+    display: none;
+}
